# headset-battery-indicator

./: .gitmodules  Cargo.toml  README.md  build.rs  installer.iss
.github/workflows/: release.yml
changelog/: v3.4.0.md  v3.4.1.md
src/: headset_control.rs  lang.rs  lib.rs  menu.rs  version_check.rs
