[package]
name = "headset-battery-indicator"
version = "3.4.1"
edition = "2024"
authors = ["Aaro Luomanen"]
description = "Displays a battery icon in the Windows system tray for wireless headsets."
license = "MIT"
homepage = "https://github.com/aarol/headset-battery-indicator"
default-run = "headset-battery-indicator-debug"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "headset-battery-indicator-debug"
path = "src/bin/debug.rs"

[dependencies]
anyhow = "1.0.99"
dirs = "6.0.0"
hidapi = "2.6.3"
log = "0.4.22"
win32_notif = "0.10.2"
serde = "1.0.219"
serde_derive = "1.0.228"
serde_json = "1.0.145"
simplelog = { version = "0.12.2", features = ["paris"] }
sys-locale = "0.3.2"
toml = "0.9.5"
tray-icon = "0.21.3"
winit = "0.30.12"
winreg = "0.55.0"
ureq = { version = "3.1.4", features = ["json"] }
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Storage_EnhancedStorage",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_LibraryLoader",
    "Win32_UI_Shell",
    "Win32_UI_Shell_PropertiesSystem",
] }
libc = "0.2.180"

[build-dependencies]
winres = "0.1"
cmake = "0.1"
vcpkg = "0.2"
cc = {version = "1", features = ["jobserver"]}

[profile.release]
opt-level = "z"
lto = true
